ubah theme dan menyesuaikan tampilan card biodata mitra

--- a/backend/web/css/creative.css
+++ b/backend/web/css/creative.css
@@ -12,7 +12,7 @@ body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif; }
 
 hr {
-  max-width: 50px;
+  max-width: 70px;
   border-width: 3px;
   border-color:green;}
 
@@ -48,6 +48,9 @@ p {
 
 section {
   padding: 20px; }
+
+aside section{
+  padding: 10px 0px 5px 0px; }
 
 .section-heading {
   margin-top: 0; }
@@ -214,9 +217,6 @@ header.masthead {
 }
 .card-panel, .card{
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);
-}
-.h3h{
-    min-height: 60px;
 }
 
 .portfolio-box {
